force-app/main/default/objects/sfdc_Config__mdt/sfdc_Config__mdt.object-meta.xml
<CustomObject>
    <label>Salesforce Config</label>
    <pluralLabel>Salesforce Configs</pluralLabel>
</CustomObject>