force-app/main/default/objects/sfdc_Config__mdt/fields/accesstoken__c.field-meta.xml
<CustomField>
    <fullName>accesstoken__c</fullName>
    <label>access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>