force-app/main/default/objects/sfdc_Config__mdt/fields/authurl__c.field-meta.xml
<CustomField>
    <fullName>authurl__c</fullName>
    <defaultValue>&quot;/services/oauth2/authorize&quot;</defaultValue>
    <label>auth url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>