force-app/main/default/objects/sfdc_Config__mdt/fields/clientid__c.field-meta.xml
<CustomField>
    <fullName>clientid__c</fullName>
    <label>client id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>