force-app/main/default/objects/sfdc_Config__mdt/fields/clientsecret__c.field-meta.xml
<CustomField>
    <fullName>clientsecret__c</fullName>
    <label>client secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>