force-app/main/default/objects/sfdc_Config__mdt/fields/instanceurl__c.field-meta.xml
<CustomField>
    <fullName>instanceurl__c</fullName>
    <label>instance url</label>
    <type>Url</type>
</CustomField>