force-app/main/default/objects/sfdc_Config__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>PageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>