force-app/main/default/objects/sfdc_Config__mdt/fields/refreshtoken__c.field-meta.xml
<CustomField>
    <fullName>refreshtoken__c</fullName>
    <label>refresh token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>