force-app/main/default/objects/sfdc_Config__mdt/fields/tokenurl__c.field-meta.xml
<CustomField>
    <fullName>tokenurl__c</fullName>
    <defaultValue>&quot;/services/oauth2/token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>